syntax = "proto3";
package tendermint.mempool;

option go_package = "github.com/cometbft/cometbft/proto/tendermint/mempool";

message Txs {
  repeated bytes txs = 1;
}

message SeenTx {
  bytes tx_key = 1;
  bytes signer = 2;    // transaction signer/address for sequence validation
  uint64 sequence = 3; // transaction sequence number for ordering
}

message WantTx {
  bytes tx_key = 1;
}

message Message {
  oneof sum {
    Txs    txs     = 1;
    SeenTx seen_tx = 2;
    WantTx want_tx = 3;
  }
}
